# voltaware_collector

./: CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  package.xml  setup.py
launch/: collector.launch  trader.launch
scripts/: collector_node  http_node  trader_node
src/voltaware_collector/: __init__.py  client.py  storage.py
